Change controls - lmb - shot, space - jump

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 		<p>
 			<h2>Sterowanie</h2>
 			<b>D, strzałka prawo</b> - poruszanie się<br/>
-			<b>Spacja</b> - Strzał<br/>
+			<b>Lewy przycisk myszy</b> - Strzał<br/>
 			<b>Lewy ctrl</b> - Kucnięcie<br/>
-			<b>Lewy shift</b> - Skok<br/>
+			<b>Spacja</b> - Skok<br/>
 		</p>
 		<p id="copyright">Made with <span style="color:red">❤</span> by Eryk and Karolina Dwornicki.</p>
 	</center>
